Replace DatatypeConverter (deprecated) by Base64.